--- a/gperiodic.desktop.in
+++ b/gperiodic.desktop.in
@@ -5,4 +5,4 @@ Exec=gperiodic
 Icon=gperiodic
 Terminal=false
 Type=Application
-Categories=Education;Science;Chemistry;
+Categories=Education;Science;Chemistry;Physics;
