- add Belarusian translation
git-svn-id: http://svn.code.sf.net/p/gperiodic/code/trunk@32 0ad6494c-dd34-4e59-9d04-8dff0e227eb0

--- a/gperiodic.desktop.in
+++ b/gperiodic.desktop.in
@@ -1,5 +1,6 @@
 [Desktop Entry]
 Name=GPeriodic
+GenericName=GPeriodic
 _Comment=A program for looking up data of elements from the periodic table
 Exec=gperiodic
 Icon=gperiodic
