--- a/gperiodic.desktop.in
+++ b/gperiodic.desktop.in
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Name=GPeriodic
-GenericName=GPeriodic
+_GenericName=Periodic table application
 _Comment=A program for looking up data of elements from the periodic table
 Exec=gperiodic
 Icon=gperiodic
