- GenericName with translations
git-svn-id: http://svn.code.sf.net/p/gperiodic/code/trunk@42 0ad6494c-dd34-4e59-9d04-8dff0e227eb0

--- a/gperiodic.desktop.in
+++ b/gperiodic.desktop.in
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Name=GPeriodic
-_GenericName=Periodic table application
+_GenericName=Periodic table of the elements
 _Comment=A program for looking up data of elements from the periodic table
 Exec=gperiodic
 Icon=gperiodic
